<resources>
    <!-- android manifest.xml -->
    <string name="app_name">what\'s eat</string>

    <!-- Logo Image Content Description -->
    <string name="logoImg_Common">로고 이미지</string>

    <!-- Location Permission Content String -->
    <string name="Location_Permission">이 애플리케이션은 위치정보 사용 허가가 필요합니다.</string>

    <!-- Toast Message -->
    <string name="IsNotNewUser_Toast">이미 가입된 사용자 입니다.</string>
    <string name="IsNotValidateEmail_Toast">유효하지 않은 이메일입니다.</string>
    <string name="NickNameIsLong_Toast">사용자 닉네임이 너무 깁니다.</string>
    <string name="PasswordIsNotConfirm_Toast">패스워드가 일치하지 않습니다.</string>
    <string name="SendResetEmail_Toast">고객님의 이메일로 비밀번호 초기화 메일을 보냈습니다.</string>
    <string name="EmailNotExist_Toast">유효하지 않은 이메일 방식입니다.</string>

    <!-- Input Error Message -->
    <string name="InputNickName_Error">사용자 닉네임을 입력해주세요.</string>
    <string name="InputFullName_Error">사용자 이름을 입력해주세요.</string>
    <string name="InputEmail_Error">사용자 이메일을 입력해주세요.</string>
    <string name="InputPassword_Error">사용자 패스워드를 입력해주세요.</string>
    <string name="InputConfirmPassword_Error">패스워드 확인란에 입력해주세요</string>

    <!-- navigation Title -->
    <string name="Home">홈 화면</string>
    <string name="Profile">프로필</string>
    <string name="Collection">컬렉션</string>
    <string name="Others">기타</string>
    <string name="SignOut">로그아웃</string>

    <!--  Fragment Home.xml -->
    <string name="MainBannerTitle">내 주변 음식점</string>
    <string name="MainBannerContent">오늘의 식사 여기는 어떤가요?</string>
    <string name="SubCardLocale">Example</string>
    <string name="SubCardContent">근처 맛집</string>
    <string name="ActiveGPS">GPS 기능을 활성화 해주세요.</string>

    <!-- Fragment Profile.xml -->
    <string name="Profile_ImageView_Desc">ProfileImage</string>
    <string name="Profile_UserName_Txt">Example</string>
    <string name="Profile_Email_Txt">User@Example.com</string>

    <string name="ImgLayout_Profile_Desc">Image Card View</string>
    <string name="Profile_Collection_Number">5 Star</string>
    <string name="Profile_Collection_Txt">컬렉션</string>

    <string name="UpdateAccount_Btn">계정 정보 수정하기</string>
    <string name="DeleteAccount_Btn">계정 삭제하기</string>

    <string name="Box_delAccount">계정을 삭제하시겠습니까?</string>
    <string name="btn_delBox_Yes">네!</string>
    <string name="btn_delBox_No">아니요</string>

    <!--Activity LogIn.xml-->
    <string name="LogIn_Title">Welcome!</string>
    <string name="LogIn_SubTitle">계속 하시려면 로그인 해주세요.</string>
    <string name="LogIn_Email_Hint">Email</string>
    <string name="LogIn_Password_Hint">Password</string>
    <string name="FindPassword_Btn">비밀번호를 잊어버리셨나요?</string>
    <string name="LogIn_Btn">로그인</string>
    <string name="SignUp_Btn">회원가입</string>
    <string name="LogIn_Failed">이메일과 패스워드를 다시 확인해 주세요</string>

    <!--Activity SignIn.xml-->
    <string name="SignIn_Title">Welcome!</string>
    <string name="SignIn_SubTitle">회원가입을 환영합니다!</string>

    <string name="SignIn_FullName_Hint">Full Name</string>
    <string name="SignIn_UserName_Hint">User Name</string>
    <string name="SignIn_Email_Hint">Email</string>
    <string name="SignIn_Password_Hint">Password</string>
    <string name="SignIn_ConfirmPassword_Hint">Confirm Your Password</string>

    <!--Activity FindPassword.xml-->
    <string name="FindPassword_Title">Did you Forgot Password?</string>
    <string name="FindPassword_SubTitle">비밀번호를 잊어버리셨나요?</string>
    <string name="FindPassword_Email_Hint">Email</string>
    <string name="SendResetPassword_Btn">비밀번호 초기화 메일 보내기</string>
    <string name="ToLogIn_Btn">로그인 화면으로 이동</string>
    <string name="ToSignUp_Btn">회원가입 화면으로 이동</string>

    <!-- Collection Item.xml -->
    <string name="placeImageView">PlaceImageView</string>
    <string name="placeNameView_txt">이름: </string>
    <string name="placeAddressView_Txt">주소: </string>
    <string name="placeRatingNumView_Txt">(평점): </string>
    <string name="placeNameTxt_Example">name Example</string>
    <string name="placeAddressTxt_Example">Address Example</string>
    <string name="Rating_Number_view">ratingNumber_View</string>
    <string name="RatingNumberTxt_Example">4.7</string>

    <string name="home_main_banner">Home Main Banner</string>
    <string name="PlaceName">Example</string>
    <string name="place_image">Place Image</string>

    <string name="LogOut_Content">로그아웃 하시겠습니까?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PlaceLocation">위치</string>
    <string name="AddCollection_Btn">컬렉션에 추가하기</string>

    <string name="isOpenNow">영업 중</string>
    <string name="isCloseNow">영업 종료</string>
    <string name="mapView">PlaceMapView</string>

</resources>