<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/placeImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/placeImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/placeName_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeNameView_txt"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/placeImg"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/placeName_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/placeNameTxt_Example"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/placeName_View"
            app:layout_constraintStart_toEndOf="@id/placeName_View"
            app:layout_constraintTop_toTopOf="@+id/placeName_View" />

        <TextView
            android:id="@+id/placeAddress_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeAddressView_Txt"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeName_View" />

        <TextView
            android:id="@+id/placeAddress_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/placeAddressTxt_Example"
            app:layout_constraintBottom_toBottomOf="@+id/placeAddress_View"
            app:layout_constraintStart_toEndOf="@id/placeAddress_View"
            app:layout_constraintTop_toTopOf="@+id/placeAddress_View" />

        <ImageView
            android:id="@+id/ratingNum_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Rating_Number_view"
            android:src="@drawable/ic_star_gray"
            app:layout_constraintTop_toBottomOf="@id/placeAddress_View"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ratingNum_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/placeRatingNumView_Txt"
            app:layout_constraintBottom_toBottomOf="@+id/ratingNum_View"
            app:layout_constraintStart_toEndOf="@id/ratingNum_View"
            app:layout_constraintTop_toTopOf="@+id/ratingNum_View" />

        <TextView
            android:id="@+id/ratingNum_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/RatingNumberTxt_Example"
            app:layout_constraintBottom_toBottomOf="@+id/ratingNum_View"
            app:layout_constraintStart_toEndOf="@id/ratingNum_TxtView"
            app:layout_constraintTop_toTopOf="@+id/ratingNum_View" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>