<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/TopProfileView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#403E3E"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/Profile_ImgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/ImgLayout_Profile_Desc" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nickName_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/CardView"
                android:text="@string/Profile_UserName_Txt"
                android:textSize="25sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/userEmail_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/CardView"
                android:layout_below="@id/nickName_Txt"
                android:text="@string/Profile_Email_Txt"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/signOut_Btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="#403E3E"
                android:src="@drawable/ic_sign_out"
                android:contentDescription="@string/SignOut" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ProfileCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TopProfileView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="#403E3E">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_collection"
                        android:contentDescription="@string/ImgLayout_Profile_Desc" />

                    <TextView
                        android:id="@+id/profile_rate_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:includeFontPadding="false" />

                    <TextView
                        android:id="@+id/profile_rate_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/profile_rate_num"
                        android:includeFontPadding="false"
                        android:text="@string/Profile_Collection_Txt"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.7"/>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/UpdateAccount_Btn"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#fff" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/DeleteAccount_Btn"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#fff"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>